# NJU-CS-Formal-Languages-and-Automata

./: .gitignore  CMakeLists.txt  README.md  实验报告.md
programs/: case1.tm  case2.tm  case2_test.shell  homework_3_1.tm  homework_3_2_a.tm  homework_3_2_b.tm
test_script/: case1_test_normal.shell  case1_test_verbose.shell  case2_test_normal.shell  case2_test_verbose.shell  turing
turing-project/: Tape.cpp  Tape.h  TransitionFunction.cpp  TransitionFunction.h  TuringMachine.cpp  TuringMachine.h  main.cpp  message.cpp  message.h  utils.cpp  utils.h
